--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -48,7 +48,7 @@ jobs:
       run: npm install
 
     - name: Build pt-notification-service
-      run: npx nx build pt-notification-service
+      run: npx nx build pt-notification-service --verbose
 
     - name: Build Docker images
       run: |
