--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -49,6 +49,11 @@ jobs:
 
     - name: Build pt-notification-service
       run: npx nx build pt-notification-service --verbose
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+       username: ${{ secrets.DOCKER_USERNAME }}
+       password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
     - name: Build Docker images
       run: |
